# balancer-maths

./: .gitignore  README.md
python/: .bandit  .pylintrc  README.md  pyproject.toml
python/src/: __init__.py  add_liquidity.py  base_pool_math.py  log_exp_math.py  maths.py  oz_math.py  remove_liquidity.py  swap.py  utils.py  vault.py
python/src/common/: __init__.py  base_pool_math.py  bigint.py  log_exp_math.py  maths.py  oz_math.py  pool_base.py  swap_params.py  types.py  utils.py
python/src/hooks/: default_hook.py  exit_fee_hook.py  map_hook_state.py  stable_surge_hook.py  types.py
python/src/hooks/exit_fee/: exit_fee_hook.py  types.py
python/src/hooks/stable_surge/: stable_surge_hook.py
python/src/pools/: akron_weighted_math.py  stable.py  stable_math.py  weighted.py  weighted_math.py
python/src/pools/buffer/: buffer_data.py  buffer_math.py  enums.py  erc4626_buffer_wrap_or_unwrap.py  ray_math_explicit_rounding.py
python/src/pools/fixed_price_lbp/: fixed_price_lbp.py  fixed_price_lbp_data.py
python/src/pools/gyro/: gyro2CLP.py  gyro2CLP_math.py  gyroECLP.py  gyroECLP_math.py  gyro_2clp.py  gyro_2clp_math.py  gyro_eclp.py  gyro_eclp_math.py  gyro_pool_math.py  signed_fixed_point.py
python/src/pools/liquidity_bootstrapping/: liquidity_bootstrapping.py  liquidity_bootstrapping_data.py  liquidity_bootstrapping_math.py
python/src/pools/quantamm/: __init__.py  quantamm.py  quantamm_math.py
python/src/pools/reclamm/: __init__.py  reclamm.py  reclamm_data.py  reclamm_math.py
python/src/pools/reclamm_v2/: reclamm_v2.py  reclamm_v2_data.py  reclamm_v2_math.py
python/src/pools/stable/: stable.py  stable_data.py  stable_math.py
python/src/pools/weighted/: weighted.py  weighted_math.py
python/src/vault/: add_liquidity.py  remove_liquidity.py  swap.py  vault.py
python/test/: price_impact_calculator.py  test_add_liquidity.py  test_custom_pool.py  test_reclamm.py  test_remove_liquidity.py  test_swaps.py
python/test/hooks/: after_add_liquidity.py  after_remove_liquidity.py  after_swap.py  before_add_liquidity.py  before_remove_liquidity.py  before_swap.py  exit_fee.py  test_after_add_liquidity.py  test_after_remove_liquidity.py  test_after_swap.py  test_before_add_liquidity.py  test_before_remove_liquidity.py  test_before_swap.py  test_exit_fee.py  test_hook.py  test_stable_surge.py  test_stable_surge_add_remove.py
python/test/utils/: default_pool.py  map_hook_state.py  map_pool_state.py  read_test_data.py  validate_balances.py
python/tools/simulator/: README.md  __init__.py  fuzz_example.py  read_simulation_data.py  simulator.py  state_loader.py  test_simulator.py  types.py  utils.py
rust/: CHANGELOG.md  Cargo.toml  RELEASE.md  rust-toolchain.toml
rust/src/: lib.rs
rust/src/common/: constants.rs  errors.rs  log_exp_math.rs  maths.rs  mod.rs  oz_math.rs  pool_base.rs  types.rs  utils.rs
rust/src/hooks/: mod.rs  types.rs
rust/src/hooks/akron/: mod.rs
rust/src/pools/: mod.rs
rust/src/vault/: add_liquidity.rs  base_pool_math.rs  mod.rs  remove_liquidity.rs  swap.rs
rust/tests/: add_liquidity_test.rs  remove_liquidity_test.rs  swap_test.rs  test_akron_hook.rs  test_directional_fee_hook.rs  test_exit_fee_hook.rs  test_reclamm_swap_to_price.rs  test_stable_surge_add_remove.rs  test_stable_surge_hook.rs  test_stable_surge_hook_ts1.rs  test_stable_surge_hook_ts2.rs  test_stable_surge_hook_ts3.rs  weighted_math_test.rs  weighted_pool_test.rs
rust/tests/utils/: map_hook_state.rs  mod.rs  read_test_data.rs  test_helpers.rs
(+251 files in other folders)
