[package]
name = "balancer-maths-rust"
version = "0.3.0"
edition = "2021"
description = "Balancer V3 mathematics library in Rust"
license = "MIT"
repository = "https://github.com/balancer/balancer-maths"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Big integers - essential for financial calculations
alloy-primitives = { version = "0.5", features = ["serde"] }
lazy_static = "1.4"

# Serialization - for data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Only for testing

[lib]
name = "balancer_maths_rust"
path = "src/lib.rs"
